force-app/main/default/objects/Contract/fields/netsuite_conn__Contract_Renewed_On__c.field-meta.xml
<CustomField>
    <fullName>netsuite_conn__Contract_Renewed_On__c</fullName>
    <label>Contract Renewed On</label>
    <type>Date</type>
</CustomField>