force-app/main/default/objects/Contract/fields/netsuite_conn__Distributor__c.field-meta.xml
<CustomField>
    <fullName>netsuite_conn__Distributor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Distributor</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Contracts (Distributor)</relationshipLabel>
    <relationshipName>Contracts2</relationshipName>
    <type>Lookup</type>
</CustomField>