force-app/main/default/objects/Contract/fields/netsuite_conn__End_Date_For_Upsell__c.field-meta.xml
<CustomField>
    <fullName>netsuite_conn__End_Date_For_Upsell__c</fullName>
    <label>End Date For Upsell</label>
    <type>Date</type>
</CustomField>