force-app/main/default/objects/Contract/fields/netsuite_conn__NetSuite_Contract_Number__c.field-meta.xml
<CustomField>
    <fullName>netsuite_conn__NetSuite_Contract_Number__c</fullName>
    <label>NetSuite Contract Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>