force-app/main/default/objects/Contract/fields/netsuite_conn__NetSuite_Renewal_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>netsuite_conn__NetSuite_Renewal_Opportunity__c</fullName>
    <description>Contains internal id of NetSuite renewal Opportunity.</description>
    <label>NetSuite Renewal Opportunity</label>
    <length>255</length>
    <type>Text</type>
</CustomField>