force-app/main/default/objects/Contract/fields/netsuite_conn__NetSuite_Renewal_Transaction_Internal_Id__c.field-meta.xml
<CustomField>
    <fullName>netsuite_conn__NetSuite_Renewal_Transaction_Internal_Id__c</fullName>
    <label>NetSuite Renewal Transaction Internal Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>