force-app/main/default/objects/Contract/fields/netsuite_conn__Original_Contract__c.field-meta.xml
<CustomField>
    <fullName>netsuite_conn__Original_Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Original Contract</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Contracts</relationshipLabel>
    <relationshipName>Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>