force-app/main/default/objects/Contract/fields/netsuite_conn__Related_Transaction_Ids__c.field-meta.xml
<CustomField>
    <fullName>netsuite_conn__Related_Transaction_Ids__c</fullName>
    <label>Related Transaction Ids</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>