force-app/main/default/objects/Contract/fields/netsuite_conn__Renewal_Terms__c.field-meta.xml
<CustomField>
    <fullName>netsuite_conn__Renewal_Terms__c</fullName>
    <label>Renewal Terms</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>