force-app/main/default/objects/Contract/fields/netsuite_conn__Reseller__c.field-meta.xml
<CustomField>
    <fullName>netsuite_conn__Reseller__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reseller</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Contracts (Reseller)</relationshipLabel>
    <relationshipName>Contracts1</relationshipName>
    <type>Lookup</type>
</CustomField>