force-app/main/default/objects/Contract/fields/netsuite_conn__Ship_To_Tier__c.field-meta.xml
<CustomField>
    <fullName>netsuite_conn__Ship_To_Tier__c</fullName>
    <label>Ship To Tier</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>End User</fullName>
            </value>
            <value>
                <fullName>Reseller</fullName>
            </value>
            <value>
                <fullName>Distributor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>